@@ -27,8 +27,9 @@ import com.facebook.buck.android.packageable.AndroidPackageableCollector;
 import com.facebook.buck.android.toolchain.ndk.NdkCxxPlatform;
 import com.facebook.buck.android.toolchain.ndk.NdkCxxPlatformsProvider;
 import com.facebook.buck.android.toolchain.ndk.NdkCxxRuntime;
-import com.facebook.buck.android.toolchain.ndk.NdkCxxRuntimeType;
 import com.facebook.buck.android.toolchain.ndk.TargetCpuType;
+import com.facebook.buck.android.toolchain.ndk.UnresolvedNdkCxxPlatform;
+import com.facebook.buck.android.toolchain.ndk.impl.StaticUnresolvedNdkCxxPlatform;
 import com.facebook.buck.core.cell.TestCellPathResolver;
 import com.facebook.buck.core.exceptions.HumanReadableException;
 import com.facebook.buck.core.model.BuildTarget;
@@ -38,9 +39,7 @@ import com.facebook.buck.core.model.targetgraph.TargetGraphFactory;
 import com.facebook.buck.core.model.targetgraph.TargetNode;
 import com.facebook.buck.core.rules.ActionGraphBuilder;
 import com.facebook.buck.core.rules.BuildRule;
-import com.facebook.buck.core.rules.BuildRuleParams;
 import com.facebook.buck.core.rules.SourcePathRuleFinder;
-import com.facebook.buck.core.rules.TestBuildRuleParams;
 import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
 import com.facebook.buck.core.sourcepath.FakeSourcePath;
 import com.facebook.buck.core.sourcepath.SourceWithFlags;
@@ -58,7 +57,6 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.ImmutableSortedSet;
-import java.nio.file.Paths;
 import java.util.Optional;
 import org.hamcrest.Matchers;
 import org.junit.Rule;
@@ -79,8 +77,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
         new NdkLibraryBuilder(BuildTargetFactory.newInstance("//:ndklib")).build(graphBuilder);
 
     BuildTarget target = BuildTargetFactory.newInstance("//:target");
-    BuildRuleParams originalParams =
-        TestBuildRuleParams.create().withDeclaredDeps(ImmutableSortedSet.of(ndkLibrary));
 
     APKModuleGraph apkModuleGraph = new APKModuleGraph(TargetGraph.EMPTY, target, Optional.empty());
 
@@ -96,7 +92,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             graphBuilder,
             target,
             projectFilesystem,
-            originalParams,
             ImmutableSet.of(),
             CxxPlatformUtils.DEFAULT_CONFIG,
             /* nativeLibraryMergeMap */ Optional.empty(),
@@ -107,8 +102,7 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             apkModuleGraph);
 
     AndroidPackageableCollector collector =
-        new AndroidPackageableCollector(
-            target, ImmutableSet.of(), ImmutableSet.of(), apkModuleGraph);
+        new AndroidPackageableCollector(target, ImmutableSet.of(), apkModuleGraph);
     collector.addPackageables(
         AndroidPackageableCollector.getPackageableRules(ImmutableSet.of(ndkLibrary)), graphBuilder);
 
@@ -119,9 +113,7 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
 
     assertThat(copyNativeLibraries.getStrippedObjectDescriptions(), Matchers.empty());
     assertThat(
-        copyNativeLibraries
-            .getNativeLibDirectories()
-            .stream()
+        copyNativeLibraries.getNativeLibDirectories().stream()
             .map(sourcePathResolver::getRelativePath)
             .collect(ImmutableList.toImmutableList()),
         Matchers.contains(ndkLibrary.getLibraryPath()));
@@ -131,17 +123,17 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
   @SuppressWarnings("unchecked")
   public void testCxxLibrary() {
 
-    NdkCxxPlatform ndkCxxPlatform =
-        NdkCxxPlatform.builder()
-            .setCxxPlatform(CxxPlatformUtils.DEFAULT_PLATFORM)
-            .setCxxRuntime(NdkCxxRuntime.GNUSTL)
-            .setCxxRuntimeType(NdkCxxRuntimeType.DYNAMIC)
-            .setCxxSharedRuntimePath(Paths.get("runtime"))
-            .setObjdump(new CommandTool.Builder().addArg("objdump").build())
-            .build();
+    UnresolvedNdkCxxPlatform ndkCxxPlatform =
+        StaticUnresolvedNdkCxxPlatform.of(
+            NdkCxxPlatform.builder()
+                .setCxxPlatform(CxxPlatformUtils.DEFAULT_PLATFORM)
+                .setCxxRuntime(NdkCxxRuntime.GNUSTL)
+                .setCxxSharedRuntimePath(FakeSourcePath.of("runtime"))
+                .setObjdump(new CommandTool.Builder().addArg("objdump").build())
+                .build());
 
-    ImmutableMap<TargetCpuType, NdkCxxPlatform> nativePlatforms =
-        ImmutableMap.<TargetCpuType, NdkCxxPlatform>builder()
+    ImmutableMap<TargetCpuType, UnresolvedNdkCxxPlatform> nativePlatforms =
+        ImmutableMap.<TargetCpuType, UnresolvedNdkCxxPlatform>builder()
             .put(TargetCpuType.ARMV7, ndkCxxPlatform)
             .put(TargetCpuType.X86, ndkCxxPlatform)
             .build();
@@ -160,8 +152,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
     graphBuilder.addToIndex(cxxLibrary);
 
     BuildTarget target = BuildTargetFactory.newInstance("//:target");
-    BuildRuleParams originalParams =
-        TestBuildRuleParams.create().withDeclaredDeps(ImmutableSortedSet.of(cxxLibrary));
 
     APKModuleGraph apkModuleGraph = new APKModuleGraph(TargetGraph.EMPTY, target, Optional.empty());
 
@@ -177,7 +167,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             graphBuilder,
             target,
             projectFilesystem,
-            originalParams,
             ImmutableSet.of(TargetCpuType.ARMV7),
             CxxPlatformUtils.DEFAULT_CONFIG,
             /* nativeLibraryMergeMap */ Optional.empty(),
@@ -188,8 +177,7 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             apkModuleGraph);
 
     AndroidPackageableCollector collector =
-        new AndroidPackageableCollector(
-            target, ImmutableSet.of(), ImmutableSet.of(), apkModuleGraph);
+        new AndroidPackageableCollector(target, ImmutableSet.of(), apkModuleGraph);
     collector.addPackageables(
         AndroidPackageableCollector.getPackageableRules(ImmutableSet.of(cxxLibrary)), graphBuilder);
 
@@ -212,9 +200,7 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
     assertThat(copyNativeLibraries.getNativeLibDirectories(), Matchers.empty());
     ImmutableCollection<BuildRule> stripRules =
         ruleFinder.filterBuildRuleInputs(
-            copyNativeLibraries
-                .getStrippedObjectDescriptions()
-                .stream()
+            copyNativeLibraries.getStrippedObjectDescriptions().stream()
                 .map(StrippedObjectDescription::getSourcePath)
                 .collect(ImmutableSet.toImmutableSet()));
     assertThat(
@@ -234,8 +220,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
                 .build(graphBuilder);
 
     BuildTarget target = BuildTargetFactory.newInstance("//:target");
-    BuildRuleParams originalParams =
-        TestBuildRuleParams.create().withDeclaredDeps(ImmutableSortedSet.of(cxxLibrary));
 
     APKModuleGraph apkModuleGraph = new APKModuleGraph(TargetGraph.EMPTY, target, Optional.empty());
 
@@ -251,7 +235,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             graphBuilder,
             target,
             projectFilesystem,
-            originalParams,
             ImmutableSet.of(),
             CxxPlatformUtils.DEFAULT_CONFIG,
             /* nativeLibraryMergeMap */ Optional.empty(),
@@ -262,8 +245,7 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             apkModuleGraph);
 
     AndroidPackageableCollector collector =
-        new AndroidPackageableCollector(
-            target, ImmutableSet.of(), ImmutableSet.of(), apkModuleGraph);
+        new AndroidPackageableCollector(target, ImmutableSet.of(), apkModuleGraph);
 
     collector.addNativeLinkable(cxxLibrary);
 
@@ -281,8 +263,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
                 .build(graphBuilder);
 
     BuildTarget target = BuildTargetFactory.newInstance("//:target");
-    BuildRuleParams originalParams =
-        TestBuildRuleParams.create().withDeclaredDeps(ImmutableSortedSet.of(cxxLibrary));
 
     APKModuleGraph apkModuleGraph = new APKModuleGraph(TargetGraph.EMPTY, target, Optional.empty());
 
@@ -298,7 +278,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             graphBuilder,
             target,
             projectFilesystem,
-            originalParams,
             ImmutableSet.of(),
             CxxPlatformUtils.DEFAULT_CONFIG,
             /* nativeLibraryMergeMap */ Optional.empty(),
@@ -309,8 +288,7 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             apkModuleGraph);
 
     AndroidPackageableCollector collector =
-        new AndroidPackageableCollector(
-            target, ImmutableSet.of(), ImmutableSet.of(), apkModuleGraph);
+        new AndroidPackageableCollector(target, ImmutableSet.of(), apkModuleGraph);
 
     collector.addNativeLinkableAsset(cxxLibrary);
 
@@ -327,17 +305,17 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
   @Test
   public void testDuplicateCxxLibrary() {
 
-    NdkCxxPlatform ndkCxxPlatform =
-        NdkCxxPlatform.builder()
-            .setCxxPlatform(CxxPlatformUtils.DEFAULT_PLATFORM)
-            .setCxxRuntime(NdkCxxRuntime.GNUSTL)
-            .setCxxRuntimeType(NdkCxxRuntimeType.DYNAMIC)
-            .setCxxSharedRuntimePath(Paths.get("runtime"))
-            .setObjdump(new CommandTool.Builder().addArg("objdump").build())
-            .build();
+    UnresolvedNdkCxxPlatform ndkCxxPlatform =
+        StaticUnresolvedNdkCxxPlatform.of(
+            NdkCxxPlatform.builder()
+                .setCxxPlatform(CxxPlatformUtils.DEFAULT_PLATFORM)
+                .setCxxRuntime(NdkCxxRuntime.GNUSTL)
+                .setCxxSharedRuntimePath(FakeSourcePath.of("runtime"))
+                .setObjdump(new CommandTool.Builder().addArg("objdump").build())
+                .build());
 
-    ImmutableMap<TargetCpuType, NdkCxxPlatform> nativePlatforms =
-        ImmutableMap.<TargetCpuType, NdkCxxPlatform>builder()
+    ImmutableMap<TargetCpuType, UnresolvedNdkCxxPlatform> nativePlatforms =
+        ImmutableMap.<TargetCpuType, UnresolvedNdkCxxPlatform>builder()
             .put(TargetCpuType.ARMV7, ndkCxxPlatform)
             .put(TargetCpuType.X86, ndkCxxPlatform)
             .build();
@@ -366,9 +344,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
     graphBuilder.addToIndex(cxxLibrary2);
 
     BuildTarget target = BuildTargetFactory.newInstance("//:target");
-    BuildRuleParams originalParams =
-        TestBuildRuleParams.create()
-            .withDeclaredDeps(ImmutableSortedSet.of(cxxLibrary1, cxxLibrary2));
 
     APKModuleGraph apkModuleGraph = new APKModuleGraph(TargetGraph.EMPTY, target, Optional.empty());
 
@@ -384,7 +359,6 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             graphBuilder,
             target,
             projectFilesystem,
-            originalParams,
             ImmutableSet.of(TargetCpuType.ARMV7),
             CxxPlatformUtils.DEFAULT_CONFIG,
             /* nativeLibraryMergeMap */ Optional.empty(),
@@ -395,8 +369,7 @@ public class AndroidNativeLibsPackageableGraphEnhancerTest {
             apkModuleGraph);
 
     AndroidPackageableCollector collector =
-        new AndroidPackageableCollector(
-            target, ImmutableSet.of(), ImmutableSet.of(), apkModuleGraph);
+        new AndroidPackageableCollector(target, ImmutableSet.of(), apkModuleGraph);
     collector.addPackageables(
         AndroidPackageableCollector.getPackageableRules(ImmutableSet.of(cxxLibrary1, cxxLibrary2)),
         graphBuilder);
